--- a/src/components/page.module.css
+++ b/src/components/page.module.css
@@ -15,7 +15,7 @@
     "list";
   grid-template-rows: auto 32vh minmax(0, 1fr);
   grid-template-columns: 1fr;
-  padding-top: 64px;
+  padding-top: 56px;
 }
 
 .searchBar {
@@ -35,7 +35,7 @@
   overflow-y: auto;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 600px) {
   .changingPlacesLocator {
     display: grid;
     width: 100%;
@@ -44,13 +44,14 @@
       "list  map";
     grid-template-rows: auto minmax(0, 1fr);
     grid-template-columns: 4fr 6fr;
+    padding-top: 64px;
   }
 
   .searchBar {
     margin-left: 16px;
     margin-right: 16px;
-    padding-top: 2.4rem;
-    padding-bottom: 1.6rem;
+    padding-top: 16px;
+    padding-bottom: 16px;
   }
 }
 
