--- a/src/components/map.module.css
+++ b/src/components/map.module.css
@@ -1,3 +1,14 @@
+.container {
+  height: 100%;
+  position: relative;
+}
+
 .map {
   height: 100%;
+}
+
+.fab {
+  position: absolute;
+  top: 10px;
+  right: 10px;
 }
