feat: filters can now filter

--- a/src/components/filters.module.css
+++ b/src/components/filters.module.css
@@ -4,3 +4,13 @@
   bottom: 32px;
   text-transform: none;
 }
+
+.formControl {
+  margin: 8px;
+  min-width: 120px;
+  max-width: 300px;
+}
+
+.button {
+  text-transform: none;
+}
