--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,5 +1,7 @@
 .root {
-  flex-grow: 1;
+  flex: 0 0 auto;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1), 0 2px 2px rgba(0, 0, 0, 0.06),
+    0 0 2px rgba(0, 0, 0, 0.07);
 }
 
 .menuButton {
