--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,11 @@ body {
 }
 
 #root {
-  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
 }
